--- a/style.css
+++ b/style.css
@@ -14,9 +14,17 @@ main{
     padding: 24px;
     align-items: start;
     border-radius: 10px;
+    box-shadow: 10px 10px 1px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+main:hover{
+    box-shadow: 15px 15px 3px;
 }
 main img{
     width: 100%;
+    border-radius: 4px;
 }
 .textarea{
     font-family: figtree;
@@ -24,6 +32,10 @@ main img{
     flex-direction: column;
     gap: 2px;
 
+}
+h1:hover{
+    color: #F4D04E;
+    cursor: pointer;
 }
 #Button{
     background-color: #F4D04E;
@@ -35,17 +47,19 @@ main img{
 h1{
     font-size: 24px;
     line-height: 150%;
+    margin: 0px;
 }
 .maintext{
     font-size: 16px;
     font-weight: 300;
+    margin: 0px;
 }
 .profile img{
     width: 50px;
     height: 50px;
 }
 .text{
-    font-weight: 14px;
+    font-weight: 10px;
 }
 .profile{
     display: flex;
