--- a/style.css
+++ b/style.css
@@ -70,4 +70,9 @@ h1{
 span{
     font-weight: bold;
 }
-
+@media (max-width:900px){
+    main{
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+}
